--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
                 <button class="tool">+/-</button>
                 <button class="tool">%</button>
                 <button class="operator">÷</button>
-                <button>7</button>
-                <button>8</button>
-                <button>9</button>
+                <button class="seven">7</button>
+                <button class="eight">8</button>
+                <button class="nine">9</button>
                 <button class="operator">✕</button>
-                <button>4</button>
-                <button>5</button>
-                <button>6</button>
+                <button class="four">4</button>
+                <button class="five">5</button>
+                <button class="six">6</button>
                 <button class="operator">−</button>
-                <button>1</button>
-                <button>2</button>
-                <button>3</button>
+                <button class="one">1</button>
+                <button class="two">2</button>
+                <button class="three">3</button>
                 <button class="operator">+</button>
-                <button>0</button>
+                <button class="zero">0</button>
                 <button class="comma">,</button>
                 <button class="operator equal">=</button>
             </div>
