Sum two numbers function

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                 <p class="outcome">0</p>
             </div>
             <div class="buttons">
-                <button class="tool">AC</button>
-                <button class="tool">+/-</button>
+                <button class="clear">C</button>
+                <button class="tool add">+/-</button>
                 <button class="tool">%</button>
                 <button class="operator">÷</button>
                 <button class="seven">7</button>
@@ -32,7 +32,7 @@
                 <button class="one">1</button>
                 <button class="two">2</button>
                 <button class="three">3</button>
-                <button class="operator">+</button>
+                <button class="operator add">+</button>
                 <button class="zero">0</button>
                 <button class="comma">,</button>
                 <button class="operator equal">=</button>
