Recode add, make calculator substract

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             </div>
             <div class="buttons">
                 <button class="clear">C</button>
-                <button class="tool add">+/-</button>
-                <button class="tool">%</button>
+                <button class="tool">+/-</button>
+                <button class="operator">%</button>
                 <button class="operator">÷</button>
                 <button class="seven">7</button>
                 <button class="eight">8</button>
@@ -28,7 +28,7 @@
                 <button class="four">4</button>
                 <button class="five">5</button>
                 <button class="six">6</button>
-                <button class="operator">−</button>
+                <button class="operator substract">−</button>
                 <button class="one">1</button>
                 <button class="two">2</button>
                 <button class="three">3</button>
