--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <button class="clear">C</button>
                 <button class="tool">+/-</button>
                 <button class="operator">%</button>
-                <button class="operator">÷</button>
+                <button class="operator divide">÷</button>
                 <button class="seven">7</button>
                 <button class="eight">8</button>
                 <button class="nine">9</button>
