Change comma to dot

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <button class="three">3</button>
                 <button class="operator add">+</button>
                 <button class="zero">0</button>
-                <button class="comma">,</button>
+                <button class="comma">.</button>
                 <button class="operator equal">=</button>
             </div>
         </div>
