--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="buttons">
                 <button class="clear">C</button>
                 <button class="tool">+/-</button>
-                <button class="operator">%</button>
+                <button class="operator percent">%</button>
                 <button class="operator divide">÷</button>
                 <button class="seven">7</button>
                 <button class="eight">8</button>
