Add change symbol function

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
             <div class="buttons">
                 <button class="clear">C</button>
-                <button class="tool">+/-</button>
+                <button class="tool symbol">+/-</button>
                 <button class="operator percent">%</button>
                 <button class="operator divide">÷</button>
                 <button class="seven">7</button>
